--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     snakecase (>= 0.9.2),
     magrittr,
     purrr,
-    rlang
+    rlang,
+    tidyselect
 License: MIT + file LICENSE
 LazyData: true
 RoxygenNote: 7.0.2
